<resources>
    <string name="app_name">Quiz App Project</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="account">Account</string>
    <string name="email">Email</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to login  -->

    <string name="sub_items">Sub items</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="item_4">Item 4</string>
    <string name="item_5">Item 5</string>
    <string name="item_6">Item 6</string>
    <string name="item_7">Item 7</string>
    <string name="about">About</string>
    <string name="helpfeedback">Help and Feedback</string>
    <string name="subjects">Subjects</string>
    <string name="quizzes">Quizzes</string>
    <string name="notifications">Notifications</string>
    <string name="share_the_app">Share the App</string>
    <string name="visit_nvsu_online">Visit NVSU Online</string>
    <string name="log_in">Log In</string>
    <string name="clear">Clear</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="quiz_name">Quiz Name</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="quiz_subject">Quiz Subject</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="add_a_quiz_item">Add a quiz item</string>
    <string name="add_a_problem">Add a Problem</string>
    <string name="problem_description">Problem Description</string>
    <string name="clear_all_quiz_set">Clear all Quiz Set</string>
    <string name="delete">Delete</string>
    <string name="create_edit_a_quiz">Create/Edit a Quiz</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="pass_answers">Pass Answers</string>
    <string name="about_info">Laureta, Leonardo B.\n\nSalvador, Philip U.\n\nBSCS 3A \n\n 2022</string>
    <string name="create">Create</string>
</resources>