<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_settings_24"
            android:id="@+id/firstFragment"
            android:name="com.bscs3a_2022.quizappproject2.FirstFragment"
            android:title="@string/item_1"
            />
        <item
            android:id="@+id/secondFragment"
            android:title="@string/item_2"
            android:icon="@drawable/ic_baseline_settings_24"/>
        <item
            android:id="@+id/quizFragment"
            android:title="@string/item_3"
            android:icon="@drawable/ic_baseline_settings_24"/>
        <item
            android:id="@+id/loginFragment"
            android:title="@string/item_4"
            android:icon="@drawable/ic_baseline_settings_24"/>
        <item
            android:id="@+id/nav_5"
            android:title="@string/item_5"
            android:icon="@drawable/ic_baseline_settings_24"/>

        <item
            android:id="@+id/nav_x"
            android:name="com.bscs3a_2022.quizappproject2.FirstFragment"
            android:title="@string/sub_items">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_6"
                        android:title="@string/item_6"
                        />

                    <item
                        android:id="@+id/nav_7"
                        android:title="@string/item_7"
                        />
                </group>
            </menu>
        </item>
    </group>

</menu>