<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/quiz_item_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit_nvsu_online"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_item_problem"
        app:layout_constraintVertical_bias="1.0">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_1"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_2"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_3"/>
            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_4"/>

        </RadioGroup>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_5" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>